# drm

./: configure
tests/kmstest/: Makefile.am  Makefile.in  kmstest_advanced  kmstest_advanced.c
